resources/style.css
/*Universal and body styling */

* {
    /*font-family: 'Fondamento', cursive;*/
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
}

body {
    height: 100%;
    padding-bottom: 0px;
    border: ridge 15px rgba(107, 71, 36,1);
    background-color: rgba(248, 233, 173,0.8);
}

/* Setting up the main grid template */

.container {
    background-image: url("Images/background.JPG");
    background-size: auto 1500px; 
    /*background-color: rgba(255, 255, 255,0.3); */
    width: 100%;
    min-height: 1200px;
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: minmax(14%,170px) minmax(6%,72px) minmax(68%,816px) 8% 4%;
    grid-template-areas: 
    "heading"
    "navBar"
    "content"
    "findMore"
    "footer"
}

.cell {
    background-color: rgba(255, 255, 255,0.3);
}


/* Heading area */

.heading {
    grid-area: heading;
    display: grid;
    justify-items: center;
    align-items: center;
    border: none;
    padding-top: 10px;
    background-color: rgba(248, 233, 173,0.8);
    height: 100%;
    width: 100%;
}

.heading div {
    /*text-align: center; */
    font-size: 1.7em;
    background-color: rgba(142, 153, 99,1);
    /*padding: 10px 40px; */
    border-radius: 5px;
    border: double 5px black;
    width: 85%;
    height: 90%;
    display: grid;
    grid-template-columns: 15% 85%;
    grid-template-rows: 60% 40%;
    align-items: center;
    justify-items: center;
    grid-template-areas: 
    "img heading"
    "img subheading"
}

.heading h1 {
    grid-area: heading;
    height: 90%;
    font-family: 'Fondamento', cursive;
    text-shadow: 2px 2px 5px rgba(65, 61, 61,1);
}

.heading h1, h3 {
    /*padding: 0px;
    margin: 0px; */
}

.heading h3 {
    grid-area: subheading;
    font-family: 'Cormorant Infant', serif;
    text-shadow: 1px 1px 2px rgba(65, 61, 61,1);
}

.heading img {
    /*max-height: 90%;*/
    max-height: 120px;
    min-height: 30px;
    grid-area: img;
    border: double 4px black;
    border-radius: 2px;
}


/*NavBar area */

.navBar {
    grid-area: navBar;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    border: none;
    padding: 0px 20%;
    background-color: rgba(248, 233, 173,0.8);
    border-bottom: double 5px black;
}

.navBar a {
    font-size: 2em;
    text-decoration: none;
    color: black;
    font-family: 'Cormorant Infant', serif;
    transition: border-bottom 0.5s ease-in;
    border-bottom: 1px solid rgba(43, 39, 39,0);
}

.navBar a:hover {
    /*border-top: 1px solid grey;*/
    border-bottom: 1px solid rgba(43, 39, 39,1);
   /* border-top: 1px solid grey; */
}

/* Content area */

.content {
    grid-area: content;
    display: flex;
    flex-wrap: wrap;
    align-content: center;
    justify-content: center;
    font-family: 'Cormorant Infant', serif;
    color: rgba(43, 39, 39,1);
    background-color: rgba(255, 255, 255,0.4);
}

.box {
    max-width: 40%;
    height: 40%;
    margin: 20px 20px;
    display: flex;
    flex-direction: column; 
    justify-content: space-between;
    align-items: center;
    text-align: center;
    /*background-image: url("https://via.placeholder.com/500x300");*/
    border-radius: 2px;
    box-shadow: 8px 8px 5px rgba(90, 88, 88,0.4);
    background-size: cover;
    /*border: ridge 5px rgba(107, 71, 36) */
    border: solid 2px rgba(43, 39, 39,1);
}

.box h2 strong {
    font-size: 1.5em;
}

.box h2 p {
    /*font-family: 'Cormorant Infant', serif;*/
}

.box p {
    opacity: 0;
    transition: opacity 3s;
    background-color:rgba(248, 233, 173,0.9);
    padding: 10px 10px;
    margin: 2px 2px;
    border: 1px solid rgba(43, 39, 39,1);
    border-radius: 2px;
}

.box h2 {
    background-color:rgba(248, 233, 173,0.9);
    transition: font-size 2s;
    width: 90%;
    padding: 5px 5px;
    border-radius: 2px;
    border: 1px solid rgba(43, 39, 39,1);
    margin-top: 0px;
}

.box:hover p {
    opacity: 1;
}

.box:hover h2 {
    font-size: 1.6em;
}

.box p:hover {
    color: rgba(15, 104, 104,1);
    cursor: pointer;
}

/*individual boxes in content area */

.when {
   /* background-image: url("Images/Tudor door.JPG"); */
   background-image: url("Images/combined-image-2.jpg");
}

.why {
    background-image: url("Images/Homepage tollhouse.jpg");
}

.who {
    /*background-image: url("Images/MrSumner.jpg"),url("Images/James Mangles.JPG");
    background-position: left, right;
    background-repeat: no-repeat, repeat;
    background-size: contain; */
    background-image: url("Images/combined-image-1.jpg");
}

.how{
    background-image: url("Images/Homepage change.JPG");
}


/* Find Out More area */

.findMore {
    grid-area: findMore;
    display: flex;
    align-items: flex-start;
    justify-content: center;
    font-family: 'Fondamento', cursive;
    background-color: rgba(255, 255, 255,0.4);
}

.findMore h2 {
    font-size: 2.2em;
    background: rgba(248, 233, 173,0.9);
    width: fit-content;
    height: fit-content;
    padding: 10px 10px;
    border-radius: 5px;
    border: double 5px black;
    text-shadow: 1px 1px 2px rgba(65, 61, 61,1);
    transition: font-size 1s linear;
}

.findMore h2:hover {
    font-size: 2.3em;
    cursor: pointer;
    color: rgba(13, 61, 61,1);
}

/* Footer area */

.footer {
    grid-area: footer;
    background-color: rgba(248, 233, 173,0.8);
    border-top: double 5px black;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: 'Cormorant Infant', serif;
    color:rgba(43, 39, 39,1);
    padding: 0px 5px;
}

